--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -7,60 +7,61 @@
     android:layout_height="match_parent"
     tools:context=".activities.CartActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/my_cart_toolbar"
-        android:layout_width="401dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="4dp"
-        android:background="@color/colorPink"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:title="My Cart" />
+<androidx.core.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@color/colorPink"
-        android:gravity="center"
-        android:text="Total Price:$40"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.157"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="66dp" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cart_rec"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView3"
-        app:layout_constraintWidth_percent=".9"
-        tools:listitem="@layout/my_cart_item"/>
+        android:orientation="vertical">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/my_cart_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_marginTop="4dp"
+            android:background="@color/colorPink"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:title="My Cart" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@color/colorPink"
+            android:gravity="center"
+            android:text="Total Price:$40"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/cart_rec"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/my_cart_item" />
+
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
 
 <Button
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:background="@color/colorCyan"
-    android:backgroundTint="@color/colorAccent"
-    android:drawableLeft="@drawable/cart1"
-    android:padding="14dp"
-    android:text="Buy Now"
-    android:textAllCaps="false"
-    android:textStyle="bold"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintWidth_percent=".9"/>
+android:layout_width="0dp"
+android:layout_height="wrap_content"
+android:layout_margin="10dp"
+android:background="@color/colorCyan"
+android:backgroundTint="@color/colorAccent"
+android:drawableLeft="@drawable/cart1"
+android:padding="14dp"
+android:text="Buy Now"
+android:textAllCaps="false"
+android:textStyle="bold"
+app:layout_constraintBottom_toBottomOf="parent"
+app:layout_constraintEnd_toEndOf="parent"
+app:layout_constraintStart_toStartOf="parent"
+app:layout_constraintWidth_percent=".9"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
