--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -21,8 +21,9 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/my_cart_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="40dp"
             android:layout_marginTop="4dp"
+            android:layout_marginBottom="8dp"
             android:background="@color/colorPink"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
@@ -34,7 +35,7 @@
             android:layout_height="40dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:background="@color/colorPink"
+            android:background="@color/colorCyan"
             android:gravity="center"
             android:text="Total Price:$40"
             android:textSize="20sp"
