--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.AddAddressActivity">
-
+    xmlns:tools="http://schemas.android.com/tools" android:layout_height="wrap_content" android:layout_width="match_parent">
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
@@ -33,6 +29,7 @@
             android:id="@+id/ad_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:text="Name"
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -53,6 +50,7 @@
             android:id="@+id/ad_address"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:text="Address"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -72,6 +70,7 @@
             android:id="@+id/ad_city"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:text="City"
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -92,7 +91,8 @@
             android:id="@+id/ad_code"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="number"/>
+            android:text="Pincode"
+            android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -110,6 +110,7 @@
             android:id="@+id/ad_phone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:text="Phone No."
             android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -117,10 +118,10 @@
         android:id="@+id/ad_add_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="100dp"
         android:text="Add Address"
         android:textColor="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent" />
@@ -129,7 +130,7 @@
         android:id="@+id/add_address_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorCyan"
+        android:background="#8FF7FD"
         app:title="Add Address"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
